--- a/3. Python/python101.ipynb
+++ b/3. Python/python101.ipynb
@@ -565,7 +565,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fonksiyonların dokümanlarına yani detaylı bilgilerine erişmek için fonksiyon isminin başına ? işareti koyarız"
+    "### *Fonksiyonların dokümanlarına yani detaylı bilgilerine erişmek için fonksiyon isminin başına ? işareti koyarız*"
    ]
   },
   {
