--- a/3. Python/python301.ipynb
+++ b/3. Python/python301.ipynb
@@ -411,7 +411,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### *Break and Continue*"
+    "### *Break and Continue*\n",
+    "- *Continue: Yakalanan şartı atlayarak işleme devam etmek için kullanılır*\n",
+    "- *Break: Yakalanan şarta gelindiğinde çalışmayı durdurmak için kullanılır*"
    ]
   },
   {
