--- a/4. Veri Manipülasyonu/veri_manipulasyonu101.ipynb
+++ b/4. Veri Manipülasyonu/veri_manipulasyonu101.ipynb
@@ -958,6 +958,110 @@
     "print(\"x0:\", x0)\n",
     "print(\"x1:\", x1)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### *Creating a three-dimensional array*\n",
+    "*np.random.randint(Rastgele üretilen sayıların olduğu aralık, size = (arka arkaya kaç tane olacağının sayısı, Satır Sayısı, Sütun Sayısı))*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size'ı (1,3,2) olan:\n",
+      " [[[6 9]\n",
+      "  [4 4]\n",
+      "  [7 9]]]\n",
+      "\n",
+      "Size'ı (2,3,2) olan:\n",
+      " [[[2 0]\n",
+      "  [9 8]\n",
+      "  [9 0]]\n",
+      "\n",
+      " [[3 2]\n",
+      "  [2 7]\n",
+      "  [0 8]]]\n",
+      "\n",
+      "Size'ı (3,2,2) olan:\n",
+      " [[[7 6]\n",
+      "  [9 7]]\n",
+      "\n",
+      " [[6 4]\n",
+      "  [5 4]]\n",
+      "\n",
+      " [[1 9]\n",
+      "  [0 7]]]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "ucboyutlu1 = np.random.randint(10, size = (1,3,2))\n",
+    "print(\"Size'ı (1,3,2) olan:\\n\", ucboyutlu1, end=\"\\n\\n\")\n",
+    "\n",
+    "ucboyutlu2 = np.random.randint(10, size = (2,3,2))\n",
+    "print(\"Size'ı (2,3,2) olan:\\n\", ucboyutlu2, end=\"\\n\\n\")\n",
+    "\n",
+    "ucboyutlu3 = np.random.randint(10, size = (3,2,2))\n",
+    "print(\"Size'ı (3,2,2) olan:\\n\", ucboyutlu3, end=\"\\n\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size'ı (3,3,2) olan:\n",
+      " [[[2 2]\n",
+      "  [6 2]\n",
+      "  [2 4]]\n",
+      "\n",
+      " [[9 0]\n",
+      "  [7 9]\n",
+      "  [1 1]]\n",
+      "\n",
+      " [[7 0]\n",
+      "  [6 6]\n",
+      "  [2 7]]]\n",
+      "\n",
+      "Size'ı (3,3,1) olan:\n",
+      " [[[2]\n",
+      "  [9]\n",
+      "  [6]]\n",
+      "\n",
+      " [[9]\n",
+      "  [5]\n",
+      "  [8]]\n",
+      "\n",
+      " [[4]\n",
+      "  [3]\n",
+      "  [1]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "ucboyutlu4 = np.random.randint(10, size = (3,3,2))\n",
+    "print(\"Size'ı (3,3,2) olan:\\n\", ucboyutlu4, end=\"\\n\\n\")\n",
+    "\n",
+    "ucboyutlu5 = np.random.randint(10, size = (3,3,1))\n",
+    "print(\"Size'ı (3,3,1) olan:\\n\", ucboyutlu5)"
+   ]
   }
  ],
  "metadata": {
