--- a/7. Veri Ön İşleme/2.aykiri_gozlem_analizi.ipynb
+++ b/7. Veri Ön İşleme/2.aykiri_gozlem_analizi.ipynb
@@ -7,9 +7,9 @@
     "### Aykırı Gözlem\n",
     "Veride genel eğilimin oldukça dışına çıkan ya da diğer gözlemlerden oldukça farklı olan gözlemlere Aykırı Gözlem denir.\n",
     "\n",
-    "Aykırı Değer: Aykırılığı ifade eden nümerik değere Aykırı Değer denir.\n",
+    "**Aykırı Değer:** Aykırılığı ifade eden nümerik değere Aykırı Değer denir.\n",
     "\n",
-    "Aykırı Gözlem: Aykırı değeri barındıran gözlem birimine Aykırı Gözlem denir.\n",
+    "**Aykırı Gözlem:** Aykırı değeri barındıran gözlem birimine Aykırı Gözlem denir.\n",
     "\n",
     "---\n",
     "\n",
@@ -27,14 +27,14 @@
     "### Kime Göre Neye Göre Aykırı?\n",
     "Aykırı Gözlem'i, veride genel eğilimin oldukça dışına çıkan gözlemler olarak tanımlamıştık. Peki veri setinin  genel eğiliminin dışına çıkmayı nasıl tanımlarız?\n",
     "\n",
-    "1. Sektör Bilgisi\n",
+    "1. **Sektör Bilgisi**\n",
     "\n",
     "    Çalıştığımız ya da iyi bildiğimiz bir sektör hakkında genellemeye neyi alıp almayacağımızı çok iyi biliriz.\n",
     "Örn. bir ev fiyat tahmin modelinde 1000 metrekarelik evleri modellemeye almamak. Çünkü evler genelde 1000 metrekarelikten azdır ve genelleme yapmak için evlerin metrekarelerini birbirine yakın değerler seçmeliyiz ki modelimiz sağlıklı çalışabilsin. 1000 metrekare çok uç bir değer olduğu için modelimizde yanlılıklara, yanlışlıklara yol açabilir.\n",
     "\n",
     "> Eğer kurulan modelin bir genelleme kaygısı varsa; zaten çok seyrek olan senaryolar ve genele uymayan yapılar çalışmanın dışında bırakılmalıdır.\n",
     "\n",
-    "2. Standart Sapma Yaklaşımı\n",
+    "2. **Standart Sapma Yaklaşımı**\n",
     "\n",
     "    Bir değişkenin ortalamasının üzerine aynı değişkenin standart sapması hesaplanarak eklenir. 1,2 ya da 3 standart sapma değeri ortalama üzerine eklenerek ortaya çıkan bu değer eşik değer olarak düşünülür ve bu değerden yukarıda ya da aşağıda olan değerler aykırı değer olarak tanımlanır.\n",
     "\n",
@@ -44,13 +44,13 @@
     "\n",
     "*Eşik Değer = Ortalama + 3 x Standart Sapma*\n",
     "\n",
-    "3. Z-Skoru Yaklaşımı\n",
+    "3. **Z-Skoru Yaklaşımı**\n",
     "\n",
     "    Standart sapma yöntemine benzer şekilde çalışır. Değişken standart normal dağılıma uyarlanır, yani standartlaştırılır. Sonrasında -örneğin- dağılımın sağından ve solundan -+ 2,5 değerine göre bir eşik değer konulur ve bu değerin üzerinde ya da altında olan değerler aykırı değer olarak işaretlenir.\n",
     "\n",
     "    ![z_tablosu](../images/veri_on_isleme/z_tablosu.jpg)\n",
     "\n",
-    "4. Boxplot(interquartile range - IQR) Yöntemi\n",
+    "4. **Boxplot(interquartile range - IQR) Yöntemi**\n",
     "\n",
     "    En sık kullanılan yöntemlerden birisidir. Değişkenin değerleri küçükten büyüğe sıralanır. Çeyrekliklerine (yüzdekliklerine) yani Q1,Q3 değerlerine karşılık gelen değerler üzerinden bir eşik değer hesaplanır ve bu eşik değere göre aykırı değer tanımı yapılır.\n",
     "\n",
