--- a/7. Veri Ön İşleme/1.veri_on_islemeye_genel_bakis.ipynb
+++ b/7. Veri Ön İşleme/1.veri_on_islemeye_genel_bakis.ipynb
@@ -34,25 +34,36 @@
     "    - Sürekli değişkenlerde dönüşümler\n",
     "    - Kategorik değişkenlerde dönüşümler\n",
     "\n",
-    "Gürültülü Veri: Örneğin veri seti içerisinde cinsiyeti erkek olan bir kişinin aynı zamanda hamilelikle ilgili bir değişkende hamile olduğunun ifade edilmesi durumu bir gürültüdür, yanlış bir veridir. Aynı şekilde bir bebek biberonu fiyatının 1.000.000 TL olması durumu da gürültülü, yanlış, bozuk bir durumdur. Yani bu bir aykırı durum değildir, bozuk bir durumdur.\n",
+    "**Gürültülü Veri:** Örneğin veri seti içerisinde cinsiyeti erkek olan bir kişinin aynı zamanda hamilelikle ilgili bir değişkende hamile olduğunun ifade edilmesi durumu bir gürültüdür, yanlış bir veridir. Aynı şekilde bir bebek biberonu fiyatının 1.000.000 TL olması durumu da gürültülü, yanlış, bozuk bir durumdur. Yani bu bir aykırı durum değildir, bozuk bir durumdur.\n",
     "\n",
-    "Eksik Veri: Verideki eksiklikler\n",
+    "**Eksik Veri:** Verideki eksiklikler\n",
     "\n",
-    "Aykırı Gözlem: Verideki aykırılıklar \n",
+    "**Aykırı Gözlem:** Verideki aykırılıklar \n",
     "\n",
-    "Veri Standardizasyonu: Elimizdeki değişkenleri, verileri çeşitli dönüştürme işlemlerine tabii tutmakta, yine veri ön işlemeyle ilgili işlemlerdendir.\n",
+    "**Veri Standardizasyonu:** Elimizdeki değişkenleri, verileri çeşitli dönüştürme işlemlerine tabii tutmakta, yine veri ön işlemeyle ilgili işlemlerdendir.\n",
     "\n",
-    "Veri İndirgeme: Gözlem sayısında ya da değişken sayısında veri setinin indirgenmesini ifade etmektedir.\n",
+    "**Veri İndirgeme:** Gözlem sayısında ya da değişken sayısında veri setinin indirgenmesini ifade etmektedir.\n",
     "\n",
-    "Değişken Dönüşümleri: Sürekli değişkenleri kategorik değişkenlere çevirmek gibi ya da kategorik değişkenlerin sınıfları arasında değişimler yapmak gibi işlemler."
+    "**Değişken Dönüşümleri:** Sürekli değişkenleri kategorik değişkenlere çevirmek gibi ya da kategorik değişkenlerin sınıfları arasında değişimler yapmak gibi işlemler."
    ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.9.12 ('base')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.9.12"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "62164c8fb3cdc29ac6a738f2969b51adce5d9cfcd257e47b742b1ba3a188c6d5"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
